# djangovue

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  gemini.md  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements.txt.old  vite.config.js  webpack.config.js
.github/: AGENTS.md
.github/instructions/: effective_python.instructions.md
.github/workflows/: ci.yml  codeql-analysis.yml  dependencies.yml
backend/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
backend/migrations/: __init__.py
backend/templates/: index.html
djangovue/: __init__.py  settings.py  urls.py  wsgi.py
frontend/js/: App.vue
scripts/: e2e_server_smoke.sh  e2e_template_check.py
